--- a/bibliography.bib
+++ b/bibliography.bib
@@ -48,8 +48,6 @@ abstract = {Abstract The Internet has fostered a faster, more interactive and ef
 @misc{RS-PDF,
   author       = {Soprano, Michael and Mizzaro, Stefano},
   title        = {{Readersourcing 2.0: RS\_PDF}},
-  month        = oct,
-  year         = 2018,
   doi          = {10.5281/zenodo.1442598},
   url          = {https://doi.org/10.5281/zenodo.1442597}
 }
@@ -57,8 +55,6 @@ abstract = {Abstract The Internet has fostered a faster, more interactive and ef
 @misc{RS-Server,
   author       = {Soprano, Michael and Mizzaro, Stefano},
   title        = {{Readersourcing 2.0: RS\_Server}},
-  month        = oct,
-  year         = 2018,
   doi          = {10.5281/zenodo.1442630},
   url          = {https://doi.org/10.5281/zenodo.1442630}
 }
@@ -66,8 +62,8 @@ abstract = {Abstract The Internet has fostered a faster, more interactive and ef
 @misc{RS-Rate,
   author       = {Soprano, Michael and Mizzaro, Stefano},
   title        = {{Readersourcing 2.0: RS\_Rate}},
-  month        = oct,
-  year         = 2018,
   doi          = {10.5281/zenodo.1442599},
   url          = {https://doi.org/10.5281/zenodo.1442599}
 }
+
+@article{Soprano2019,title = {Crowdsourcing Peer Review: As We May Do},journal = {Communications in Computer and Information Science},year = {2019},volume = {988},pages = {259-273},author = {Soprano, M. and Mizzaro, S.}} 
